tests/agl/rejections/type/pattern_unknown_field.agl
enum R
  | Pass
  | Fail(issues: list[text])
let r: R = Pass
case r of
  | Fail(x) => ()
  | Pass => ()
